changed background image of table form

--- a/Contact/contact.css
+++ b/Contact/contact.css
@@ -6,27 +6,46 @@ body{
     margin-left: 50px;
 
 }
-header {
+.container-header{
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    padding: 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 1000; 
-    margin-bottom: 30px;
+    box-sizing: border-box;
     background-color: white;
+    z-index: 1000;
+    margin-bottom: 30px;
+}
+.navbar{
+    height: 12%;
+    display: flex;
+    align-items: center;
 }
 
-header img {
-    width: 30%;
-    margin-right: 10px;
+.logo{
+    width: 220px;
+    cursor: pointer;
 }
-
-header h5 {
-    margin-left: 20px;
+.menu-icon{
+    width: 30px;cursor: pointer;
+    margin-left: 40px;
+}
+nav{
+    flex: 1;
+    text-align: right;
+}
+nav ul li{
+    list-style: none;
+    display: inline-block;
+    margin-left: 50px;
+}
+nav ul li a{
+    text-decoration: none;
+    color: black;
+    font-size: 13px;
+}
+a:hover{
+    color: navajowhite;
 }
 #div {
     position: relative;
@@ -67,9 +86,12 @@ span::after {
     align-items: center;
 }
 
-.container{
-    background-color: aqua;
+.container2{
+    background-color: rgb(44, 64, 71);
     width: 100%;
+    color: #000;
+    margin-bottom: 20px;
+    margin-top: 20px;
 }
 
 form {
@@ -107,8 +129,8 @@ input, textarea {
     box-sizing: border-box;
     padding: 8px;
 }
-.container2{
-    background-color: rgb(6, 6, 122);
+.container{
+    background-color: rgb(48, 48, 112);
     padding: 20px;
     color: white;
     text-align: left;
@@ -124,12 +146,20 @@ input {
     margin-bottom: 16px;
     box-sizing: border-box;
 }
-
-button {
+.button {
     background-color: #4CAF50;
     color: white;
     padding: 10px 15px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+}
+a{
+    color: azure;
+}
+a:hover{
+    color: burlywood;
+}
+a{
+    text-decoration: none;
 }
