--- a/home/index.css
+++ b/home/index.css
@@ -1,36 +1,107 @@
-header,p{
-    display: inline;
-    margin-left: 20px;
-    vertical-align: 25px;
-}
-
-video{
-    margin-bottom: 30px;
-}
-
-#imgdep{
-    margin-left: 200px;
-    height: 250px;
-    margin-right: 30px;
-    float: left;
-}
-h4{
-    clear: left;
-}
-#depev{
-    margin-bottom: 30px;
-    overflow: hidden;
-}
-
-p{
-    margin: 0;
-}
-
 body{
-    margin: 0; 
+    font-family: Arial, Helvetica, sans-serif;
+    font-size:20px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+.container-header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    box-sizing: border-box;
+    background-color: white;
+    z-index: 1000;
+    margin-bottom: 30px;
 }
 
+.navbar{
+    height: 12%;
+    display: flex;
+    align-items: center;
+}
+
+.logo{
+    width: 220px;
+    cursor: pointer;
+}
+.menu-icon{
+    width: 30px;cursor: pointer;
+    margin-left: 40px;
+}
+nav{
+    flex: 1;
+    text-align: right;
+}
+nav ul li{
+    list-style: none;
+    display: inline-block;
+    margin-left: 50px;
+}
+nav ul li a{
+    text-decoration: none;
+    color: black;
+    font-size: 13px;
+}
+a{
+    text-decoration: none;
+}
+a:hover{
+    color: rgb(216, 194, 165);
+}
+video{
+    width: 100%;
+    height: 95dvh;
+    margin-bottom: 20px;
+}
 #shortcourses{
-    clear: left;
     text-align: center;
+    margin: auto;
+    width: 50%;
+}
+.shortcourses{
+    display: flex;
+    justify-content: space-around;
+    padding: 10px;
+}
+.p-tag{
+    box-sizing: border-box;
+    border: 5px solid rgb(74, 74, 141);
+    padding: 20px;
+}
+
+
+
+
+.container2{
+    background-color: rgb(48, 48, 112);
+    padding: 20px;
+    color: white;
+    text-align: left;
+}
+label {
+    display: block;
+    margin-bottom: 8px;
+}
+
+input {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 16px;
+    box-sizing: border-box;
+}
+
+.button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+table a{
+    color: azure;
+}
+a:hover{
+    color: burlywood;
 }
