--- a/Phd programmes/phd.css
+++ b/Phd programmes/phd.css
@@ -5,38 +5,85 @@ body{
     margin-right: 30px;
 }
 
-header{
-    display: flex;
-    background-color:white;
+.container-header{
     position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    box-sizing: border-box;
+    background-color: white;
+    z-index: 1000;
+    margin-bottom: 30px;
 }
 
-h1{
-    font-size: xx-large;
+.navbar{
+    height: 12%;
+    display: flex;
+    align-items: center;
+}
+
+.logo{
+    width: 220px;
+    cursor: pointer;
+}
+.menu-icon{
+    width: 30px;cursor: pointer;
+    margin-left: 40px;
+}
+nav{
+    flex: 1;
+    text-align: right;
+}
+nav ul li{
+    list-style: none;
+    display: inline-block;
+    margin-left: 50px;
+}
+nav ul li a{
+    text-decoration: none;
+    color: black;
+    font-size: 13px;
 }
 
 .margin-bottom{
     margin-bottom: 20%;
 }
-
-.footer {
-    background-color: rgb(44, 44, 117);
-    color: #fff;
-    padding: 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-}
-
-footer img {
-    width: 50px; 
-}
-
 .backtop{
     border-radius: 30%;
     float: right;
     cursor: pointer;
+}
+.container{
+    background-color: rgb(48, 48, 112);
+    padding: 20px;
+    color: white;
+    text-align: left;
+}
+label {
+    display: block;
+    margin-bottom: 8px;
+}
+
+input {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 16px;
+    box-sizing: border-box;
+}
+.button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+a{
+    color: azure;
+}
+a:hover{
+    color: burlywood;
+}
+a{
+    text-decoration: none;
 }
