--- a/research groups/research groups.css
+++ b/research groups/research groups.css
@@ -1,14 +1,21 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
+    font-weight: 400;
     margin-left: 30px;
     margin-right: 30px;
     padding: 0;
+    box-sizing: border-box;
 }
 
-.container{
+.container-header{
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     box-sizing: border-box;
     background-color: white;
+    z-index: 1000;
+    margin-bottom: 30px;;
 }
 
 .navbar{
@@ -38,4 +45,130 @@ nav ul li a{
     text-decoration: none;
     color: black;
     font-size: 13px;
+}
+section div img{
+    width: 100%;
+    height: 200px;
+}
+.figure{
+    position: relative;
+    margin: 0;
+}
+#text-on-image{
+    position: absolute;
+    bottom: 0;
+    left: 30px;
+    color: #ffff;
+}
+.container-title{
+    margin-left:70px;
+    font-weight: 900;
+}
+.container-for-text-and-img{
+    min-height: 100vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: lemonchiffon;
+}
+.container2{
+    width: 90%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.containerheading{
+    margin-left: 50px;
+    margin-top: 50px;
+}
+.left{
+    width: 50%;
+    height: 600px;
+    background-image: url(./researchgroups.jpg);
+    background-size: cover;
+    border-radius: 8px;
+}
+.right{
+    width: 50%;
+    background-color: #2f3d3c;
+    display: flex;
+    align-items: center;
+    padding: 30px;
+    border-radius: 8px;
+}
+.left2{
+    width: 50%;
+    height: 600px;
+    background-image: url(./researchgroups2.jpg);
+    background-size: cover;
+    background-position: center;
+    border-radius: 8px;
+}
+.left3{
+    width: 50%;
+    height: 600px;
+    background-image: url(./researchgroups4.jpg);
+    background-size: cover;
+    background-position: center;
+    border-radius: 8px;
+}
+.left4{
+    width: 50%;
+    height: 600px;
+    background-image: url(./researchgroups5.jpg);
+    background-size: cover;
+    background-position: center;
+    border-radius: 8px;
+}
+.left5{
+    width: 50%;
+    height: 600px;
+    background-image: url(./researchgroups3.jpg);
+    background-size: cover;
+    background-position: center;
+    border-radius: 8px;
+}
+.container-for-text-and-img2{
+    min-height: 100vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(78, 96, 128);
+    margin-bottom: 40px;
+}
+.container{
+    background-color: rgb(48, 48, 112);
+    padding: 20px;
+    color: white;
+    text-align: left;
+}
+label {
+    display: block;
+    margin-bottom: 8px;
+}
+
+input {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 16px;
+    box-sizing: border-box;
+}
+
+.button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+a{
+    color: azure;
+    text-decoration: none;
+}
+a:hover{
+    color: burlywood;
 }
