--- a/Msc programmes/msc.css
+++ b/Msc programmes/msc.css
@@ -104,7 +104,7 @@ section {
     border: 5px solid rgb(69, 69, 172);
     border-radius: 8px;
 }
-.container{
+.container2{
     background-color: rgb(48, 48, 112);
     padding: 20px;
     color: white;
