--- a/Undergraduate programs/Undergraduate programs.css
+++ b/Undergraduate programs/Undergraduate programs.css
@@ -101,3 +101,47 @@ a:hover{
     justify-content: space-around;
     align-content: center;
 }
+.container3{
+    display: flex;
+    justify-content: space-around;
+}
+.course{
+    text-align: center;
+}
+.it{
+    text-align: right;
+}
+
+
+.container2{
+    background-color: rgb(48, 48, 112);
+    padding: 20px;
+    color: white;
+    text-align: left;
+}
+label {
+    display: block;
+    margin-bottom: 8px;
+}
+
+input {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 16px;
+    box-sizing: border-box;
+}
+
+.button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+a{
+    color: azure;
+}
+a:hover{
+    color: burlywood;
+}
